# admin

./: .gitignore  notes.txt
backend/: pyproject.toml
backend/adapt/: apps.py  graphql.py  models.py  views.py
backend/adapt/migrations/: 0001_initial.py
backend/adapt/templates/adapt/: index.html
backend/dummy/: admin.py  models.py
backend/dummy/migrations/: 0001_initial.py  0002_alter_person_address_alter_person_spouse_and_more.py
backend/proj/: settings.py  urls.py
backend/static/adapt/js/: main.js  react-syntax-highlighter_languages_refractor_abap.js  react-syntax-highlighter_languages_refractor_actionscript.js  react-syntax-highlighter_languages_refractor_ada.js  react-syntax-highlighter_languages_refractor_apacheconf.js  react-syntax-highlighter_languages_refractor_apl.js  react-syntax-highlighter_languages_refractor_applescript.js  react-syntax-highlighter_languages_refractor_arduino.js  react-syntax-highlighter_languages_refractor_arff.js  react-syntax-highlighter_languages_refractor_asciidoc.js  react-syntax-highlighter_languages_refractor_asm6502.js  react-syntax-highlighter_languages_refractor_aspnet.js  react-syntax-highlighter_languages_refractor_autohotkey.js  react-syntax-highlighter_languages_refractor_autoit.js  react-syntax-highlighter_languages_refractor_bash.js  react-syntax-highlighter_languages_refractor_basic.js  react-syntax-highlighter_languages_refractor_batch.js  react-syntax-highlighter_languages_refractor_bison.js  react-syntax-highlighter_languages_refractor_brainfuck.js  (+133 more)
backend/templates/: index.html
frontend/: .eslintrc  (+3 more)
(+30 files in other folders)
